objects/BillingScheduleLineItem__c.object
<CustomObject>
    <description>SFDC1-4488 This object is used to create a billing schedule for variable billing products.This object will be a child object to Variable Billing Schedule Object.
SFDC1-10132: Updated object label name to Volume/Variable Billing Line Item</description>
    <fields>
        <fullName>AUMBPS__c</fullName>
        <description>SFDC1-4488 This field holds the AUM BPS</description>
        <inlineHelpText>AUM Basis Point (BPS)  value provided</inlineHelpText>
        <label>AUM BPS</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUMCurrency__c</fullName>
        <description>SFDC1-4488 This field holds the AUM Currency</description>
        <inlineHelpText>AUM currency</inlineHelpText>
        <label>AUM Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUMValue__c</fullName>
        <description>SFDC-4488 This field holds the AUM Value</description>
        <inlineHelpText>AUM value provided</inlineHelpText>
        <label>AUM Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will marks the product as billed and locked</description>
        <inlineHelpText>Automatically checked when the billing schedule line item has been sent to Order Management for entering into SAP</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingEndDate__c</fullName>
        <description>SFDC1-7471 This field will hold the Billing End date</description>
        <inlineHelpText>please enter the Billing end date</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingStartDate__c</fullName>
        <description>SFDC1-7471 This field will hold the Billing Start Date</description>
        <inlineHelpText>Enter a date that falls within the ‘Invoicing Month’</inlineHelpText>
        <label>Invoicing Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7471 This field will hold Contract Line Item #
SFDC1-10132 rename the label</description>
        <inlineHelpText>System populated reference to the Contract Line Item being billed</inlineHelpText>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem__c</referenceTo>
        <relationshipLabel>Volume/Variable Billing Line Item</relationshipLabel>
        <relationshipName>BillingScheduleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1725 Contract Link to Variable Billing Schedule Object</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Volume/Variable Billing Line Items</relationshipLabel>
        <relationshipName>VolumeVariableBillingLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCreatedfromQuickAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7472 : This is an technical field only. This field will be an identifier whether this record is created using the quick action on Contract Line Item or using the Apex Clone based on the Billing period on Contract line Item.</description>
        <inlineHelpText>Only for DEV purpose. This field will be an identifier whether this record is created using the quick action on Contract Line Item or using the Apex Clone based on the Billing period on Contract line Item.</inlineHelpText>
        <label>Is Created from Quick Action?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemInvoiceRemarks__c</fullName>
        <description>SFDC1-4488 This field holds the Line Item Invoice Remarks</description>
        <inlineHelpText>Enter line item detail needed to display on invoice</inlineHelpText>
        <label>Line Item Invoice Remarks</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <description>SFDC1-7471 :This field is populated from Contract Line Item&apos;s Material Code</description>
        <formula>ContractLineItem__r.MaterialCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System populated reference to product material code being invoiced</inlineHelpText>
        <label>Material Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numberof__c</fullName>
        <description>SFDC1-4488 This field is a picklist</description>
        <inlineHelpText>Select the value that represents what customer is being billied for</inlineHelpText>
        <label>Number of</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Default</fullName>
                    <default>true</default>
                    <label>00 - Default</label>
                </value>
                <value>
                    <fullName>10 - Transactions</fullName>
                </value>
                <value>
                    <fullName>20 - Users</fullName>
                </value>
                <value>
                    <fullName>30 - Positions Prices</fullName>
                </value>
                <value>
                    <fullName>70 - Entities Accessed</fullName>
                </value>
                <value>
                    <fullName>80 - Securities SOI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessedContract__c</fullName>
        <description>SFDC-7471 This field holds the Processed Contract number</description>
        <formula>ContractLineItem__r.ProcessedContract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System populated reference to the SAP Contract # from the Contract</inlineHelpText>
        <label>Processed Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityVBAP__c</fullName>
        <description>SFDC1-4488 This field stores the Quantity VBAP</description>
        <inlineHelpText>Quantity of VBAP items to be billed</inlineHelpText>
        <label>Quantity VBAP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>SFDC1-4488: This field will be user-filled and holds the quantity</description>
        <inlineHelpText>Enter quantity being billed</inlineHelpText>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadyForBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4607 &apos;Ready for Billing&apos; checkbox on Billing Schedule Line Item</description>
        <inlineHelpText>Check if ready for billing</inlineHelpText>
        <label>Ready for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAPReleaseOrderNo__c</fullName>
        <description>SFDC-1635 Field to store sap release order number for Integration</description>
        <inlineHelpText>Order # for the requested billing</inlineHelpText>
        <label>SAP Release Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapLineItem__c</fullName>
        <description>SFDC1-7471 This field will hold the SAP Line Item Number</description>
        <inlineHelpText>System populated reference to the SAP Line Item # once line has been added to SAP</inlineHelpText>
        <label>SAP Line Item #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryMaterialDescription__c</fullName>
        <description>SFDC1-4488:This field will hold the Secondary Material Description</description>
        <inlineHelpText>Secondary SAP Material description if required</inlineHelpText>
        <label>Secondary Material Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialInstructions__c</fullName>
        <description>SFDC-1636 - New field for Variable Billing Line Object: Special Instructions</description>
        <inlineHelpText>Enter any necessary special instructions needed to process billing.</inlineHelpText>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalUpdated__c</fullName>
        <description>SFDC1-7471 This field hold the total</description>
        <inlineHelpText>Enter the total to invoice for the billing period</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>SFDC1-4488 : This field will be user-filled and holds the unit price, SFDC1-7471 Changed data type to currency</description>
        <inlineHelpText>Enter the unit price</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Volume/Variable Billing Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BSL{000000}</displayFormat>
        <label>Volume/Variable Billing Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume/Variable Billing Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BilledContractEditRestriction</fullName>
        <active>true</active>
        <description>SFDC1-4607 Only System Administrators can edit a Billing Schedule Line Item record if Billed is marked as true. SFDC1-9974 : updated the Error Message and added Profiles</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
NOT(ISNEW()),
Billed__c == TRUE,
NOT(ISCHANGED(Billed__c)),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin: API&quot;,
NOT(CONTAINS($Profile.Name, &quot;Order Management&quot;))
))</errorConditionFormula>
        <errorMessage>You can not edit Volume/Variable Billing Line Item once it is &apos;Billed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BilledEditRestriction</fullName>
        <active>true</active>
        <description>SFDC1-10150 : &apos;Billed&apos; should only be edited by System Admin, Order Management Users.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND( 
		ContractLineItem__r.Contract__r.RecordType.DeveloperName = &quot;Consulting&quot;,
ISCHANGED(Billed__c), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin: API&quot;, 
NOT(CONTAINS($Profile.Name, &quot;Order Management&quot;)) 
))</errorConditionFormula>
        <errorDisplayField>Billed__c</errorDisplayField>
        <errorMessage>You are not authorized to update &apos;Billed&apos; on Volume/Variable Billing Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingStartDateCannotBeBlank</fullName>
        <active>true</active>
        <description>SFDC1-4607 Billing Start Date cannot be blank when &apos;Ready for Billing&apos; is marked true</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
 ReadyForBilling__c == TRUE,
 ISBLANK(BillingStartDate__c) 
))</errorConditionFormula>
        <errorDisplayField>BillingStartDate__c</errorDisplayField>
        <errorMessage>Invoicing Month cannot be blank when &apos;Ready for Billing&apos; is marked true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLIBillingPeriodsNotBlankAtBSLICreate</fullName>
        <active>true</active>
        <description>SFDC1-7472 : This validation will prevent &apos;Billing Schedule Line Item&apos; record creation from CLI if Billing Periods is Blank on CLI.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
ISNEW() ,
NOT( ISBLANK(ContractLineItem__c) ) ,  ISBLANK(ContractLineItem__r.BillingPeriods__c)
))</errorConditionFormula>
        <errorMessage>Please enter Contract Line Item&apos;s Billing Periods before creating Volume/Variable Billing Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLIBillingScheduleNotBlankAtBSLICreate</fullName>
        <active>true</active>
        <description>SFDC1-9908 : This validation will prevent &apos;Billing Schedule Line Item&apos; record creation from CLI if Billing Schedule Type is Blank on CLI.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
ISNEW() ,
NOT( ISBLANK(ContractLineItem__c) ) , TEXT(ContractLineItem__r.BillingScheduleType__c) = &apos;&apos;
))</errorConditionFormula>
        <errorMessage>Please enter Contract Line Item&apos;s Billing Schedule Type before creating Volume/Variable Billing Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContractCurrencyCheck</fullName>
        <active>true</active>
        <description>SFDC - 1438 - Volume/Variable Billing Line Item Currency</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND (TEXT(CurrencyIsoCode) &lt;&gt; ContractLineItem__r.Contract__r.Currency__c))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Incorrect Currency Code, Please Refer to the Contract and Update Accordingly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockBillingScheduleForSalesProfile</fullName>
        <active>true</active>
        <description>SFDC1-9611:Polk: Sales Reps and Sales Coordinators need the ability to Edit Billing Schedule Line Items.
SFDC1-9973:Polk: Sales Reps and Sales Coordinators need the ability to Edit Billing Schedule Line Items on Contract Order Forms</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND( 
NOT(ISNEW()), 
CONTAINS($Profile.Name,&quot;Sales&quot;), 
NOT(OR(ContractLineItem__r.Contract__r.RecordType.DeveloperName = &quot;Consulting&quot;,ContractLineItem__r.Contract__r.RecordType.DeveloperName = &quot;OrderForm&quot;) 
) 
))</errorConditionFormula>
        <errorMessage>You are not authorized to update Volume/Variable Billing Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuantityCannotBeBlank</fullName>
        <active>true</active>
        <description>SFDC1-4607 Quantity cannot be blank when &apos;Ready for Billing&apos; is marked true</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
 ReadyForBilling__c == TRUE,
 ISBLANK(Quantity__c) 
))</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity cannot be blank when &apos;Ready for Billing&apos; is marked true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReadyForBillingEditRestriction</fullName>
        <active>true</active>
        <description>SFDC1-10150 : &apos;Ready for Billing&apos; should only be edited by System Admin, Order Management and Revenue Assurance Permission Set Users.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND( 
ContractLineItem__r.Contract__r.RecordType.DeveloperName = &quot;Consulting&quot;,
ISCHANGED(ReadyForBilling__c), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;, 
$Profile.Name &lt;&gt; &quot;IHSMarkit System Admin: API&quot;, 
NOT(CONTAINS($Profile.Name, &quot;Order Management&quot;)), 
NOT($Permission.RevenueAssuranceForBSLI) 
))</errorConditionFormula>
        <errorDisplayField>ReadyForBilling__c</errorDisplayField>
        <errorMessage>You are not authorized to update &apos;Ready for Billing&apos; on Volume/Variable Billing Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReadyForBillingRestriction</fullName>
        <active>true</active>
        <description>SFDC-2004: Volume/Variable Billing Line Items should not be allowed to be marked ‘Ready for Billing’ unless the contract is at stage 10 or 11.</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
NOT(ISPICKVAL(Contract__r.Status,&quot;ReadyForProcessing&quot;)),
NOT(ISPICKVAL(Contract__r.Status,&quot;Complete&quot;)),
ReadyForBilling__c = TRUE))</errorConditionFormula>
        <errorMessage>Contract Stage should be set to Stage 10-Ready for Processing as &apos;Ready for billing’ field should only be checked when stage is 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UnitPriceCannotBeBlank</fullName>
        <active>true</active>
        <description>SFDC1-4607 Unit Price cannot be blank when &apos;Ready for Billing&apos; is marked true</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.BillingScheduleLineItem__c ), False,AND(
 ReadyForBilling__c == TRUE,
 ISBLANK(UnitPrice__c) 
))</errorConditionFormula>
        <errorDisplayField>UnitPrice__c</errorDisplayField>
        <errorMessage>Unit Price cannot be blank when &apos;Ready for Billing&apos; is marked true</errorMessage>
    </validationRules>
</CustomObject>